--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -15,5 +15,5 @@
             }
         }
     },
-    "postCreateCommand": "R -q -e 'renv::install()' && R -q -e 'renv::init()'"
+    "postCreateCommand": "R -q -e 'renv::install()' && R -q -e 'renv::init()' && R -q -e install.packages('languageserver', repos='https://p3m.dev/cran/__linux__/noble/latest') "
 }
