--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -7,7 +7,8 @@
     "customizations": {
         "vscode": {
             "extensions": [
-                "posit.air-vscode"
+                "posit.air-vscode",
+                "quarto.quarto"
             ],
             "settings": {
                 "r.editor.formatOnSave": true,
