--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -7,13 +7,17 @@
     "customizations": {
         "vscode": {
             "extensions": [
-                "posit.air-vscode"
+                "posit.air-vscode",
+                "quarto.quarto"
             ],
+            
             "settings": {
-                "r.editor.formatOnSave": true,
-                "r.editor.defaultFromatter": "posit.air-vscode"
+                    "[r]": {
+                        "editor.formatOnSave": true,
+                        "editor.defaultFormatter": "Posit.air-vscode"
+                    }
+                }   
             }
-        }
-    },
-    "postCreateCommand": "R -q -e 'renv::install()' && R -q -e 'renv::init()'"
+        },
+    "postCreateCommand": "R -q -e 'renv::install()' && R -q -e 'renv::init()' && R -q -e install.packages('languageserver', repos='https://p3m.dev/cran/__linux__/noble/latest')"
 }
