--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -22,7 +22,7 @@
     "postCreateCommand": {
         "renv-install": ["R", "-q", "-e", "'renv::install()'"],
         "renv-init": ["R", "-q", "-e", "'renv::init()'"],
-        "languageserver":  ["R", "-q", "-e", "renv::install", "'languageserver'", "repos='https://p3m.dev/cran/__linux__/noble/latest'"],
+        "languageserver":  ["R", "-q", "-e", "renv::install('languageserver', repos='https://p3m.dev/cran/__linux__/noble/latest')"],
         "quarto": ["sudo", "bash", ".devcontainer/quarto-1.7.31-cli.sh"]
     }
 }
