--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -20,7 +20,7 @@
             }
         },
     "postCreateCommand": {
-        "renv-init": ["R", "-q", "-e", "'renv::init()'"],
+        "renv-init": ["R", "-q", "-e", "renv::init()"],
         "languageserver":  ["R", "-q", "-e", "renv::install('languageserver', repos='https://p3m.dev/cran/__linux__/noble/latest')"],
         "quarto": ["sudo", "bash", ".devcontainer/quarto-1.7.31-cli.sh"]
     },
