--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -2,7 +2,8 @@
     "name": "R Development",
     "image": "ghcr.io/rocker-org/devcontainer/r-ver:4",
     "features": {
-        "ghcr.io/rocker-org/devcontainer-features/renv-cache:latest": {}
+        "ghcr.io/rocker-org/devcontainer-features/renv-cache:latest": {},
+        "ghcr.io/rocker-org/devcontainer-features/quarto-cli:1": {}
     },
     "customizations": {
         "vscode": {
