--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -2,7 +2,8 @@
     "name": "R Development",
     "image": "ghcr.io/rocker-org/devcontainer/r-ver:4",
     "features": {
-        "ghcr.io/rocker-org/devcontainer-features/renv-cache:latest": {}
+        "ghcr.io/rocker-org/devcontainer-features/renv-cache:latest": {},
+        "ghcr.io/rocker-org/devcontainer-features/quarto-cli:1": {}
     },
     "customizations": {
         "vscode": {
@@ -10,19 +11,23 @@
                 "posit.air-vscode",
                 "quarto.quarto"
             ],
-            
             "settings": {
                     "[r]": {
                         "editor.formatOnSave": true,
                         "editor.defaultFormatter": "Posit.air-vscode"
                     }
                 }   
+            },
+        "codespaces": {
+            "openFiles": [
+                "README.md",
+                "R/main.R"
+                ]
             }
         },
     "postCreateCommand": {
         "renv-init": ["R", "-q", "-e", "renv::init()"],
-        "languageserver":  ["R", "-q", "-e", "renv::install('languageserver', repos='https://p3m.dev/cran/__linux__/noble/latest')"],
-        "quarto": ["sudo", "bash", ".devcontainer/quarto-1.7.31-cli.sh"]
+        "languageserver":  ["R", "-q", "-e", "renv::install('languageserver', repos='https://p3m.dev/cran/__linux__/noble/latest')"]
     },
     "postStartCommand": {
         "renv-restore": ["R", "-q", "-e", "renv::restore()"]
